# proxy-losses

./: .gitignore  404.html  LICENSE  README.md  ap_loss.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  recall_loss.py  sitemap.xml  toy_demo.py
.github/workflows/: docs.yaml  publish.yaml
docs/: index.md
docs/explanation/: assumptions-and-failure-modes.md  ddp-all-gather.md  index.md  memory-queue.md  temperature-soft-ranking.md  why-imbalanced-losses.md
docs/how-to/: configure-warmup.md  index.md  log-per-class-metrics.md  migrate-from-cross-entropy.md  train-with-ddp.md  use-focal-loss.md  use-ranking-losses.md
docs/reference/: distributed.md  index.md  loss-warmup-wrapper.md  recall-at-quantile-loss.md  sigmoid-focal-loss.md  smooth-ap-loss.md  softmax-focal-loss.md
docs/tutorials/: getting-started.md  index.md  multiclass-classification.md
examples/: binary_imbalance_demo.py  compare_demo.py  focal_demo.py  multiclass_demo.py  per_class_metrics_demo.py  ranking_demo.py  toy_demo.py
explanation/: index.html
explanation/assumptions-and-failure-modes/: index.html
explanation/ddp-all-gather/: index.html
explanation/memory-queue/: index.html
explanation/temperature-soft-ranking/: index.html
explanation/why-imbalanced-losses/: index.html
how-to/: index.html
how-to/configure-warmup/: index.html
how-to/log-per-class-metrics/: index.html
how-to/migrate-from-cross-entropy/: index.html
how-to/train-with-ddp/: index.html
how-to/use-focal-loss/: index.html
how-to/use-ranking-losses/: index.html
reference/: index.html
reference/distributed/: index.html
reference/loss-warmup-wrapper/: index.html
reference/recall-at-quantile-loss/: index.html
reference/sigmoid-focal-loss/: index.html
reference/smooth-ap-loss/: index.html
reference/softmax-focal-loss/: index.html
search/: search_index.json
src/imbalanced_losses/: __init__.py  _sampling.py  ap_loss.py  distributed.py  focal_ap_loss.py  focal_loss.py  recall_loss.py  warmup_wrapper.py
src/proxy_losses/: __init__.py  ap_loss.py  distributed.py  focal_loss.py  recall_loss.py  warmup_wrapper.py
tests/: test_distributed.py  test_focal_ap_loss.py  test_focal_loss.py  test_recall_at_quantile_loss.py  test_smooth_ap_loss.py  test_warmup_wrapper.py
tutorials/: index.html
tutorials/getting-started/: index.html
tutorials/multiclass-classification/: index.html
