[project]
name = "proxy-losses"
version = "0.1.2"
description = """
proxy-losses is a PyTorch library of differentiable proxy losses for ranking metrics — intended as drop-in replacements for cross-entropy when the real objective is Average Precision or recall at a specific operating point.
"""
authors = [
    {name = "Chris Santiago", email = "cjsantiago@gatech.edu"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]
demo = [
    "scikit-learn>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxy_losses"]

[tool.pytest.ini_options]
testpaths = ["tests"]
