[project]
name = "imbalanced-losses"
version = "0.3.0"
description = """
imbalanced-losses is a PyTorch library of training losses for class-imbalanced classification — including Focal Loss, Smooth-AP, and Recall-at-Quantile — with built-in DDP all-gather support for globally-correct rank estimation and normalization across multi-GPU training.
"""
authors = [
    {name = "Chris Santiago", email = "cjsantiago@gatech.edu"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
]

[project.optional-dependencies]
demo = [
    "scikit-learn>=1.0",
]
notebook = [
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imbalanced_losses"]

[tool.pytest.ini_options]
testpaths = ["tests"]
